USHIFT-4932: Use TLS value options from upstream
